Finally squash border bug with chunk breaking (I hope).

--- a/public/styles.less
+++ b/public/styles.less
@@ -796,8 +796,8 @@ table.commitsList, table.authorList {
         font-style: italic;
       }
     }
-    &:not(.firstBreak) { border-top: @standardBorder; }
-    &:not(.lastBreak) { border-bottom: @standardBorder; }
+    &:not(.initialBreak) { border-top: @standardBorder; }
+    &:not(.finalBreak) { border-bottom: @standardBorder; }
   }
 
   .diffLine {
